--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -7,12 +7,12 @@ env:
 
 jobs:
   job1:
-    name: First Job
+    name: Artifact Job
     runs-on: ubuntu-latest
     steps:
       - name: use checkout
         uses: actions/checkout@v2
-      - name: use artifact
-        uses: actions/upload-artifact@v2
+      # - name: use artifact
+      #   uses: actions/upload-artifact@v2
       - name: Show country
         run: echo $COUNTRY
